--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -22,6 +22,13 @@
     "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "cloudinary": "^1.11.0",
+    "dotenv": "~4.0.0",
+    "express-fileupload": "^0.4.0",
+    "node-sass-middleware": "0.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
